# vAGI-2

./: .gitignore  AI.md  Cargo.toml  LICENSE  README.md  chat.bat  plan.md  train.bat
.github/workflows/: ci.yml
crates/vagi-chat/: Cargo.toml
crates/vagi-chat/src/: config.rs  lib.rs  sampling.rs  session.rs
crates/vagi-core/: Cargo.toml
crates/vagi-core/src/: adaptive.rs  bitnet.rs  error.rs  lib.rs  simd_ternary.rs  ste.rs  ternary.rs
crates/vagi-hdc/: Cargo.toml
crates/vagi-hdc/src/: encoder.rs  lib.rs  memory.rs  vector.rs
crates/vagi-lm/: Cargo.toml
crates/vagi-lm/examples/: chat_vi.rs  convert_model.rs  eval_vietnamese.rs  finetune_vietnamese.rs  train_cpu_beast.rs  train_vietnamese.rs
crates/vagi-lm/src/: attention.rs  checkpoint.rs  config.rs  dataset.rs  embedding.rs  eval.rs  fast_train.rs  lib.rs  model.rs  sign_sgd.rs  tokenizer.rs  tokenizer_bpe.rs  training.rs  transformer.rs
crates/vagi-math/: Cargo.toml
crates/vagi-math/src/: calculus.rs  embedding.rs  expr.rs  lib.rs  linear_algebra.rs  proof.rs  reasoner.rs  rewrite.rs  simplify.rs  solver.rs
crates/vagi-memory/: Cargo.toml
crates/vagi-memory/src/: attention.rs  lib.rs  streaming.rs
crates/vagi-physics/: Cargo.toml
crates/vagi-physics/src/: discovery.rs  hamiltonian.rs  lib.rs  symbolic_reg.rs  symmetry.rs  units.rs
crates/vagi-physics/src/microworlds/: mechanics.rs  mod.rs
crates/vagi-reason/: Cargo.toml
crates/vagi-reason/src/: expert.rs  gate.rs  lib.rs  router.rs
crates/vagi-runtime/: Cargo.toml
crates/vagi-runtime/src/: lib.rs  ooda.rs
crates/vagi-train/: Cargo.toml
crates/vagi-train/src/: abstract_.rs  compose.rs  consolidate.rs  curriculum.rs  embody.rs  ewc.rs  formalize.rs  genesis.rs  lib.rs  optimizer.rs
crates/vagi-train/tests/: phase3_experiments.rs  vertical_slice.rs
crates/vagi-world/: Cargo.toml
crates/vagi-world/src/: causal.rs  lib.rs  planner.rs
docs/: ARCHITECTURE.md  RESEARCH.md
experiments/ternary-hnn/: Cargo.toml  README.md  REPORT.md
experiments/ternary-hnn/src/: backprop.rs  evaluator.rs  ground_truth.rs  main.rs  models.rs  trainer.rs
results/: experiment_A.csv  training_history.csv  training_smoke.csv
scripts/: download_vi_data.ps1  download_vi_large.ps1
scripts/data/: vi_sentences.txt
