[package]
name = "vagi-hdc"
version = "0.1.0"
edition = "2021"
description = "Hyperdimensional Computing engine for vAGI v2"

[dependencies]
vagi-core = { path = "../vagi-core" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
