[package]
name = "vagi-math"
version = "0.1.0"
edition = "2021"
description = "Mathematical foundation layer — symbolic algebra, rewrite rules, proof search for vAGI v2"

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
