[package]
name = "vagi-physics"
version = "0.1.0"
edition = "2021"
description = "Physics-grounded world model — Hamiltonian NN, symmetry discovery, microworlds for vAGI v2"

[dependencies]
vagi-core = { path = "../vagi-core" }
vagi-math = { path = "../vagi-math" }
vagi-hdc = { path = "../vagi-hdc" }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
