[package]
name = "vagi-train"
version = "0.1.0"
edition = "2021"
description = "GENESIS training protocol for vAGI v2"

[dependencies]
vagi-core = { path = "../vagi-core" }
vagi-hdc = { path = "../vagi-hdc" }
vagi-math = { path = "../vagi-math" }
vagi-physics = { path = "../vagi-physics" }
vagi-memory = { path = "../vagi-memory" }
vagi-reason = { path = "../vagi-reason" }
vagi-world = { path = "../vagi-world" }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
